[gd_scene load_steps=23 format=3 uid="uid://dx860xmw4o61e"]

[ext_resource type="Shader" path="res://shaders/water.gdshader" id="1_kgyrd"]
[ext_resource type="Script" path="res://main.gd" id="1_mxt7d"]
[ext_resource type="Texture2D" uid="uid://dbiucbq07v8bs" path="res://textures/water_normal2.jpeg" id="2_4rhmk"]
[ext_resource type="Texture2D" uid="uid://c2avtomunemgg" path="res://textures/AllSkyFree_Sky_EpicBlueSunset_Equirect.png" id="3_l4t0j"]
[ext_resource type="Shader" path="res://shaders/grass.gdshader" id="4_ge5y7"]
[ext_resource type="Texture2D" uid="uid://x5c62rwe3f35" path="res://textures/dirt_albedo.png" id="5_0y8xb"]
[ext_resource type="Texture2D" uid="uid://deg0daigvqeks" path="res://textures/dirt_normal.png" id="6_cm80v"]
[ext_resource type="Texture2D" uid="uid://bpyhw5awrmell" path="res://textures/grass.png" id="7_pgw8m"]
[ext_resource type="Texture2D" uid="uid://c8btnuia6hc72" path="res://textures/grass_normal.png" id="8_51tqm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fs6ey"]
render_priority = 0
shader = ExtResource("1_kgyrd")
shader_parameter/surface_color = Color(0, 0, 0.00784314, 1)
shader_parameter/depth_color = Color(0, 0, 0.654902, 1)
shader_parameter/opacity = 0.5
shader_parameter/normal_scale = -8.264
shader_parameter/beer_factor = 10.0
shader_parameter/_roughness = null
shader_parameter/_refraction = null
shader_parameter/_uv_scale = 1.0
shader_parameter/_foam_strength = null
shader_parameter/_foam_size = null
shader_parameter/normal_map = ExtResource("2_4rhmk")

[sub_resource type="BoxMesh" id="BoxMesh_yeb08"]
lightmap_size_hint = Vector2i(1004, 516)
material = SubResource("ShaderMaterial_fs6ey")
add_uv2 = true
size = Vector3(100, 1, 100)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_124v6"]
panorama = ExtResource("3_l4t0j")

[sub_resource type="Sky" id="Sky_2t1t3"]
sky_material = SubResource("PanoramaSkyMaterial_124v6")

[sub_resource type="Environment" id="Environment_262b8"]
background_mode = 2
background_color = Color(0.105882, 0.54902, 0.784314, 1)
background_energy_multiplier = 1.67
sky = SubResource("Sky_2t1t3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vxtn5"]
render_priority = 0
shader = ExtResource("4_ge5y7")
shader_parameter/normal_scale = -3.2
shader_parameter/_grass_albedo = ExtResource("7_pgw8m")
shader_parameter/_grass_normal = ExtResource("8_51tqm")
shader_parameter/_dirt_albedo = ExtResource("5_0y8xb")
shader_parameter/_dirt_normal = ExtResource("6_cm80v")

[sub_resource type="BoxShape3D" id="BoxShape3D_ngp5b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rkh4d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ola6p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jlbxy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_50ajj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7sd2t"]
friction = 0.0
bounce = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_6cl6v"]

[node name="Main" type="Node3D"]
script = ExtResource("1_mxt7d")

[node name="Water" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_yeb08")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_262b8")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 15, 10, 0)

[node name="Arena" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="Arena"]
size = Vector3(50, 1, 50)
material = SubResource("ShaderMaterial_vxtn5")

[node name="RigidBody3D" type="RigidBody3D" parent="Arena/Floor"]
transform = Transform3D(50, 0, 0, 0, 0, 0, 0, 0, 50, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arena/Floor/RigidBody3D"]
shape = SubResource("BoxShape3D_ngp5b")

[node name="Wall1" type="CSGBox3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 25)
size = Vector3(50, 1, 1)

[node name="RigidBody3D" type="RigidBody3D" parent="Arena/Wall1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arena/Wall1/RigidBody3D"]
shape = SubResource("BoxShape3D_rkh4d")

[node name="Wall2" type="CSGBox3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -25)
size = Vector3(50, 1, 1)

[node name="RigidBody3D" type="RigidBody3D" parent="Arena/Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arena/Wall2/RigidBody3D"]
shape = SubResource("BoxShape3D_ola6p")

[node name="Wall3" type="CSGBox3D" parent="Arena"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 25, 1, 0)
size = Vector3(50, 1, 1)

[node name="RigidBody3D" type="RigidBody3D" parent="Arena/Wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arena/Wall3/RigidBody3D"]

[node name="Wall4" type="CSGBox3D" parent="Arena"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -25, 1, 0)
size = Vector3(50, 1, 1)

[node name="RigidBody3D" type="RigidBody3D" parent="Arena/Wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arena/Wall4/RigidBody3D"]
shape = SubResource("BoxShape3D_jlbxy")

[node name="Ceiling" type="CSGBox3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0150132, 2.15407, 0.013588)
layers = 0
size = Vector3(50, 1, 50)

[node name="RigidBody3D" type="RigidBody3D" parent="Arena/Ceiling"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arena/Ceiling/RigidBody3D"]
shape = SubResource("BoxShape3D_50ajj")

[node name="Chaos_Ball1" type="RigidBody3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 2.5, 1.04849, 0)
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_7sd2t")
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chaos_Ball1"]
shape = SubResource("SphereShape3D_6cl6v")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Chaos_Ball1/CollisionShape3D"]
use_collision = true

[node name="Chaos_Ball2" type="RigidBody3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -2.5, 1.04849, 0)
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_7sd2t")
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chaos_Ball2"]
shape = SubResource("SphereShape3D_6cl6v")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Chaos_Ball2/CollisionShape3D"]
use_collision = true

[node name="Chaos_Ball3" type="RigidBody3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1.04849, 2.5)
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_7sd2t")
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chaos_Ball3"]
shape = SubResource("SphereShape3D_6cl6v")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Chaos_Ball3/CollisionShape3D"]
use_collision = true

[node name="Chaos_Ball4" type="RigidBody3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1.04849, -2.5)
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_7sd2t")
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chaos_Ball4"]
shape = SubResource("SphereShape3D_6cl6v")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Chaos_Ball4/CollisionShape3D"]
use_collision = true
